<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue_400"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>


    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:id="@+id/optRoundCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:optRoundCardBackgroundColor="@color/white"
        app:optRoundCardCornerRadius="@dimen/_50sdp"
        app:optRoundCardElevation="0dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardLeftTopCorner="true"
        app:optRoundCardRightBottomCorner="false"
        app:optRoundCardRightTopCorner="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_80sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/background_white"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/text_hint"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:background="@color/background_hint" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/background_white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/text_hint"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:background="@color/background_hint" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/button_login_background"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/anotherAccount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/button_another_account_background"
                    android:elevation="0dp"
                    android:text="@string/another_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <TextView
                    android:id="@+id/errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text=""
                    android:textAllCaps="false"
                    android:textColor="@color/red_800"
                    android:textSize="@dimen/_15ssp"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_weight="1"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingLeft="@dimen/_5sdp"
                        android:onClick="openSignUpPage"
                        android:text="@string/sign_up"
                        android:textColor="@color/light_blue_800"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:src="@drawable/user_image"
        app:layout_constraintBottom_toTopOf="@+id/optRoundCardView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/optRoundCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>